<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.SignUp">

        <View
            android:id="@+id/v_rectangle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/long_margin"
            android:layout_marginTop="@dimen/xxl_margin"
            android:layout_marginEnd="@dimen/long_margin"
            android:layout_marginBottom="@dimen/xl_margin"
            android:background="@drawable/sign_up_rectangle"
            app:layout_constraintBottom_toTopOf="@id/mb_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xl_margin"
            android:text="@string/create_account"
            android:textColor="@color/colorSignUpLightCoral"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/v_rectangle"
            app:layout_constraintStart_toStartOf="@+id/v_rectangle"
            app:layout_constraintTop_toTopOf="@+id/v_rectangle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/AppTheme.SignUp.SignUpTextInputLayout"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/xl_margin"
            app:layout_constraintEnd_toEndOf="@id/v_rectangle"
            app:layout_constraintStart_toStartOf="@id/v_rectangle"
            app:layout_constraintTop_toBottomOf="@id/actv_create_account">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_hint_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/AppTheme.SignUp.SignUpTextInputLayout"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/long_margin"
            app:layout_constraintEnd_toEndOf="@id/v_rectangle"
            app:layout_constraintStart_toStartOf="@id/v_rectangle"
            app:layout_constraintTop_toBottomOf="@id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_hint_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/AppTheme.SignUp.SignUpTextInputLayout"
            android:layout_width="0dp"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/long_margin"
            app:layout_constraintEnd_toEndOf="@id/v_rectangle"
            app:layout_constraintStart_toStartOf="@id/v_rectangle"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_hint_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/accb_agreement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xl_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:buttonTint="@color/colorSignUpBlue"
            android:checked="false"
            app:layout_constraintStart_toStartOf="@+id/v_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_agreement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/xl_margin"
            android:text="@string/agreement_checkbox_text"
            android:textColor="@color/colorSignUpLightCoral"
            android:textSize="@dimen/xs_text_size"
            app:layout_constraintEnd_toEndOf="@id/v_rectangle"
            app:layout_constraintStart_toEndOf="@+id/accb_agreement"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_continue_with_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?android:attr/colorBackground"
            android:stateListAnimator="@null"
            android:minHeight="0dp"
            android:includeFontPadding="false"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/colorSignUpBlue"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toTopOf="@id/actv_already_registered"
            app:layout_constraintEnd_toEndOf="@+id/v_rectangle"
            app:layout_constraintStart_toStartOf="@+id/v_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/actv_agreement"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_already_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/already_registered_question"
            android:textAllCaps="false"
            android:textColor="@color/colorSignUpBlue"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/v_rectangle"
            app:layout_constraintEnd_toStartOf="@+id/mb_sign_in"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/v_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/mb_continue_with_facebook" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?android:attr/colorBackground"
            android:includeFontPadding="false"
            android:stateListAnimator="@null"
            android:text="@string/sign_in"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:textAllCaps="false"
            android:textColor="@color/colorSignUpLightCoral"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/actv_already_registered"
            app:layout_constraintEnd_toEndOf="@id/v_rectangle"
            app:layout_constraintStart_toEndOf="@+id/actv_already_registered"
            app:layout_constraintTop_toTopOf="@+id/actv_already_registered" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_continue"
            android:layout_width="0dp"
            android:layout_height="@dimen/sign_up_continue_button_height"
            android:layout_marginStart="@dimen/long_margin"
            android:layout_marginEnd="@dimen/long_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            app:icon="@drawable/ic_arrow_forward_black_24dp"
            app:iconGravity="textStart"
            app:iconSize="@dimen/large_icon_size"
            app:layout_constraintBottom_toTopOf="@+id/mb_skip_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_skip_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/long_margin"
            android:layout_marginEnd="@dimen/long_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:backgroundTint="?android:attr/colorBackground"
            android:stateListAnimator="@null"
            android:text="@string/skip_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>